# c-

./: .gitignore  bible.txt  customers.txt  lekerdezesek.sql  string-1.cpp  string-2.cpp  test.cpp
1/: functions.cpp  functions.h  main.cpp  string-3.cpp  string-4.cpp  string-5.cpp
10/: Alkalmazott.cpp  Alkalmazott.h  CMakeLists.txt  Ceg.cpp  Ceg.h  Main.cpp  Manager.cpp  Manager.h  Szemely.cpp  Szemely.h
10_2/: CMakeLists.txt  GraduationExam.cpp  GraduationExam.h  GraduationInfo.cpp  GraduationInfo.h  IGraduation.h  Main.cpp  Student.cpp  Student.h
11/: CMakeLists.txt  Main.cpp  TextIndexer.cpp  TextIndexer.h  bible.txt  index.txt
12/: CMakeLists.txt  Iterator.h  Main.cpp  OrderedList.h
2/: 2.sql  Point.cpp  Point.h  main.cpp
3/: List.cpp  List.h  Stack.cpp  Stack.h  main.cpp  mainStack.cpp
4/: Point.cpp  Point.h  PointSet.cpp  main.cpp  test.cpp
5/: Matrix.cpp  Matrix.h  main.cpp
6/: CMakeLists.txt  Point.cpp  Point.h  PointSet.cpp  PointSet.h  Polynomial.cpp  Polynomial.h  main.cpp
7/: Account.cpp  Account.h  Bank.cpp  Bank.h  CMakeLists.txt  Customer.cpp  mainAccount.cpp
9/: CMakeLists.txt  main.cpp
parcialis/: AppStore.cpp  AppStore.h  Application.cpp  Application.h  CMakeLists.txt  applications.csv  main.cpp
